<resources>
    <string name="app_name">CSkies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="initial_setting">Initial Setting</string>
    <string name="location_method">Location Method</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="notification">Notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="language">Language</string>
    <string name="done">Done</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="favorites">Favorites</string>
    <string name="alerts">Alerts</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="temperature">Temperature</string>
    <string name="m_s">M/S</string>
    <string name="mile_h">Mile/H</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="fehrienhit">Fahrenheit</string>
    <string name="celisus">Celsius</string>
    <string name="kelven">Kelvin</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="loading">Loading…</string>
    <string name="alert_by">Alert By</string>
    <string name="humidity">Humidity</string>
    <string name="visability">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="alarm">Alarm</string>
    <string name="add">Add</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="close">Close</string>
    <string name="weather_alarm">Weather Alarm</string>
    <string name="add_new_location">Add New Location</string>
    <string name="enter_place">Enter Place</string>
</resources>