<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drower_graph"
    app:startDestination="@id/fragmentShowLocationData">

    <fragment
        android:id="@+id/fragmentAlertsPage"
        android:name="com.app.our.cskies.alerts.view.FragmentAlertsPage"
        android:label="@string/alerts"
        tools:layout="@layout/fragment_alerts_page">
        <action
            android:id="@+id/action_fragmentAlertsPage_to_fragmentSettingPage"
            app:destination="@id/fragmentSettingPage"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragmentFavoritesPage"
        android:name="com.app.our.cskies.favorites.view.FragmentFavoritesPage"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites_page">
        <action
            android:id="@+id/action_fragmentFavoritesPage_to_fragmentAlertsPage"
            app:destination="@id/fragmentAlertsPage"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragmentShowLocationData"
        android:name="com.app.our.cskies.weather_data_show.view.FragmentShowLocationData"
        android:label="@string/home"
        tools:layout="@layout/fragment_show_location_data">
        <action
            android:id="@+id/action_fragmentShowLocationData_to_fragmentFavoritesPage2"
            app:destination="@id/fragmentFavoritesPage"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/fragmentSettingPage"
        android:name="com.app.our.cskies.settings.view.FragmentSettingPage"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting_page">
        <action
            android:id="@+id/action_fragmentSettingPage_to_fragmentShowLocationData"
            app:destination="@id/fragmentShowLocationData"
            app:launchSingleTop="true"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>