<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.view.FragmentSettingPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/radioGroupLang"
            android:layout_width="411dp"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/setting_back_item"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7">

            <RadioButton
                android:id="@+id/radioButtonEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/english"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonArabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/arabic"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/language"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupWindSpeed" />

        <RadioGroup
            android:id="@+id/radioGroupWindSpeed"
            android:layout_width="411dp"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/setting_back_item"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6">

            <RadioButton
                android:id="@+id/radioButtonWSpeedMS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/m_s"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonWSpeedMileS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/mile_h"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/wind_speed"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupTemp" />

        <RadioGroup
            android:id="@+id/radioGroupTemp"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/setting_back_item"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <RadioButton
                android:id="@+id/radioButtonTempF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@android:drawable/btn_radio"
                android:text="@string/fehrienhit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonTempC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/celisus"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonTempK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/kelven"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/temperature"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupNotif" />

        <RadioGroup
            android:id="@+id/radioGroupNotif"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/setting_back_item"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <RadioButton
                android:id="@+id/radioButtonNotficationOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@android:drawable/btn_radio"
                android:text="@string/alerts"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonNotifOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/off"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/notification"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupLocation" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/editbox_dropdown_dark_frame"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/location_method"
            android:textAlignment="gravity"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroupLocation"
            android:layout_width="0dp"
            android:layout_height="74dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/setting_back_item"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <RadioButton
                android:id="@+id/radioButtonMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/map"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButtonGps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:button="@android:drawable/btn_radio"
                android:text="@string/gps"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonApplyChange"
            android:layout_width="166dp"
            android:layout_height="53dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_don_setting_back"
            android:text="@string/apply_changes"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupLang"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>