<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/cat_bcak_item"
    tools:context=".alerts.view.FragmentListOfAlerts">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/home_back_week_days"
        android:gravity="center_horizontal|center_vertical"
        android:padding="2dp"
        android:text="@string/alert_by"
        android:textAlignment="gravity"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxtemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxtemp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/day_item_background"
        android:checked="false"
        android:contextClickable="true"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="true"
        android:minHeight="48dp"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:centerIfNoTextEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/checkBoxhum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/day_item_background"
        android:checked="false"
        android:contextClickable="true"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="true"
        android:minHeight="48dp"
        android:text="@string/humidity"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxtemp"
        app:layout_constraintStart_toStartOf="@+id/checkBoxtemp"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxtemp" />

    <CheckBox
        android:id="@+id/checkBoxVis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/day_item_background"
        android:checked="false"
        android:contextClickable="true"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="true"
        android:minHeight="48dp"
        android:text="@string/visability"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxhum"
        app:layout_constraintStart_toStartOf="@+id/checkBoxhum"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxhum" />

    <CheckBox
        android:id="@+id/checkBoxWS"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/day_item_background"
        android:checked="false"
        android:contextClickable="true"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="true"
        android:minHeight="48dp"
        android:text="@string/wind_speed"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxVis"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/checkBoxVis"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxVis" />

    <CheckBox
        android:id="@+id/checkBoxPress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/day_item_background"
        android:checked="false"
        android:contextClickable="true"
        android:gravity="center_horizontal|center_vertical"
        android:includeFontPadding="true"
        android:minHeight="48dp"
        android:text="@string/pressure"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/checkBoxWS"
        app:layout_constraintStart_toStartOf="@+id/checkBoxWS"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWS" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonDoneAlert"
        android:layout_width="125dp"
        android:layout_height="54dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/btn_don_setting_back"
        android:text="@string/done"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxPress"
        app:layout_constraintVertical_bias="0.121" />


</androidx.constraintlayout.widget.ConstraintLayout>