<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="261dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/home_back_week_days"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/initial_setting"
            android:textAlignment="gravity"
            android:textColor="#FFFFFF"
            android:textDirection="locale"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#8F039DCD"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp"
            app:layout_constraintBottom_toTopOf="@+id/initSettingDone"
            app:layout_constraintEnd_toEndOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="244dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_back_week_days"
                android:text="@string/notification"
                android:textAlignment="center"
                android:textDirection="locale"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupNotifInit"
                android:layout_width="308dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonNotifOnInit"
                    android:layout_width="87dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/city_name_back"
                    android:padding="5dp"
                    android:text="@string/on"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonNotifOffInit"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/city_name_back"
                    android:padding="5dp"
                    android:text="@string/off"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="126dp"
            android:layout_gravity="top"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="#8F039DCD"
            app:cardCornerRadius="25dp"
            app:cardElevation="12dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <TextView
                android:id="@+id/textView"
                android:layout_width="244dp"
                android:layout_height="38dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/home_back_week_days"
                android:text="@string/location_method"
                android:textAlignment="center"
                android:textDirection="locale"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroupLoactionInit"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButtonMapInit"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/city_name_back"
                    android:padding="5dp"
                    android:text="@string/map"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioButtonGpsInit"
                    android:layout_width="88dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:background="@drawable/city_name_back"
                    android:padding="5dp"
                    android:text="@string/gps"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />
            </RadioGroup>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/initSettingDone"
            android:layout_width="212dp"
            android:layout_height="67dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_don_setting_back"
            android:text="@string/done"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>